--- a/style.css
+++ b/style.css
@@ -31,10 +31,10 @@ p{
 .button{
     background-color: black;
     color: white;
-    width: 92px;
-    height: 70px;
+    width: 72px;
+    height: 60px;
     font-size: 2.5rem;
-    margin: 10px;
+    margin: 18px;
     border-radius: 15px;
 
 }
@@ -44,3 +44,6 @@ p{
 .button:hover{
     border: 5px solid grey;
 }
+@media c
+
+
